generalize branching screens with ScreenBranch Add ScreenRemoveMemoryCard

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3624,6 +3624,17 @@ TimerSeconds=24
 MaxRankingNameLength=4
 StyleIcon=1
 MemoryCardIcons=1
+NextScreen=ScreenRemoveMemoryCard
+
+[ScreenRemoveMemoryCard]
+NextScreen=ScreenBranchEnding@ScreenBranch
+
+[ScreenBranchEnding]
+Choices=Credits,MusicScroll
+ConditionCredits=topgrade,>=,AA
+ConditionMusicScroll=
+NextScreenCredits=ScreenCredits
+NextScreenMusicScroll=ScreenMusicScroll
 
 [EditMenu]
 Arrows1X=190
