add song position meter to gameplay screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1110,6 +1110,11 @@ SecondsBetweenComments=10
 DemonstrationSeconds=30
 TickEarlySeconds=0.05
 ShowLifeMeterForDisabledPlayers=1
+SongPositionMeterWidth=
+SongPositionMeterX=
+SongPositionMeterY=
+SongPositionMeterOnCommand=hidden,1
+SongPositionMeterOffCommand=
 
 [ScreenEvaluationStage]
 NextScreen=ScreenSelectMusic
