cleanup ScreenRanking generalize scrolling lists with ListDisplay

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3434,67 +3434,81 @@ Unlock20X=250
 Unlock20Y=325
 
 [ScreenRanking]
+StepsTypesToHide=dance-couple,dance-solo,pump-halfdouble
+ShowCategories=1
+CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
+ShowAllStepsScores=0
+DifficultiesToShow=easy,medium,hard,challenge
 NextScreen=ScreenUnlock
-CategoryX=517
-CategoryY=32
-CategoryWidth=222
-CategoryOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
-CategoryOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+
+SecondsPerPage=10
+PageFadeSeconds=1.0
+EmptyScoreName=STEP
+NoScoreName=STEP
+
+RowSpacingX=0
+RowSpacingY=60
+ColSpacingX=0
+ColSpacingY=0
+StepsTypeColor1=0.6,0.6,1,1
+StepsTypeColor2=1,0.3,0.3,1
+StepsTypeColor3=0.3,1,0.3,1
+StepsTypeColor4=1.0,1,1.0,1
+StepsTypeColor5=1.0,1,1.0,1
+
 BannerX=517
 BannerY=44
-BannerWidth=220
-BannerHeight=58
-BannerOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+BannerOnCommand=scaletoclipped,220,58;addx,640;sleep,0.0;bounceend,1;addx,-640
 BannerOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 BannerFrameX=0
 BannerFrameY=0
 BannerFrameOnCommand=hidden,1
 BannerFrameOffCommand=
-TypeX=520
-TypeY=60
-TypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
-TypeOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
-LineSpacingX=0
-LineSpacingY=60
-BulletsStartX=100
-BulletsStartY=140
-Bullets1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
-Bullets2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
-Bullets3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
-Bullets4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
-Bullets5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
-Bullets1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
-Bullets2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
-Bullets3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
-Bullets4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
-Bullets5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
-TextZoom=1.0
-TextSongZoom=0.7
-TextColor=0.8,0.8,1,1
-NamesStartX=180
-NamesStartY=140
-Names1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
-Names2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
-Names3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
-Names4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
-Names5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
-Names1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
-Names2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
-Names3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
-Names4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
-Names5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
-ScoresStartX=520
-ScoresStartY=140 
-Scores1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
-Scores2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
-Scores3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
-Scores4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
-Scores5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
-Scores1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
-Scores2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
-Scores3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
-Scores4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
-Scores5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
+CategoryX=517
+CategoryY=32
+CategoryOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+CategoryOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+StepsTypeX=520
+StepsTypeY=60
+StepsTypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+StepsTypeOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+
+BulletStartX=100
+BulletStartY=140
+Bullet1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Bullet2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Bullet3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Bullet4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Bullet5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Bullet1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Bullet2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Bullet3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Bullet4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Bullet5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
+NameStartX=180
+NameStartY=140
+Name1OnCommand=horizalign,left;addx,640;sleep,0.2;bounceend,1;addx,-640
+Name2OnCommand=horizalign,left;addx,640;sleep,0.3;bounceend,1;addx,-640
+Name3OnCommand=horizalign,left;addx,640;sleep,0.4;bounceend,1;addx,-640
+Name4OnCommand=horizalign,left;addx,640;sleep,0.5;bounceend,1;addx,-640
+Name5OnCommand=horizalign,left;addx,640;sleep,0.6;bounceend,1;addx,-640
+Name1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Name2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Name3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Name4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Name5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
+ScoreStartX=520
+ScoreStartY=140 
+Score1OnCommand=horizalign,right;addx,640;sleep,0.2;bounceend,1;addx,-640
+Score2OnCommand=horizalign,right;addx,640;sleep,0.3;bounceend,1;addx,-640
+Score3OnCommand=horizalign,right;addx,640;sleep,0.4;bounceend,1;addx,-640
+Score4OnCommand=horizalign,right;addx,640;sleep,0.5;bounceend,1;addx,-640
+Score5OnCommand=horizalign,right;addx,640;sleep,0.6;bounceend,1;addx,-640
+Score1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Score2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Score3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Score4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Score5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 PointsStartX=380
 PointsStartY=140
 Points1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
@@ -3519,43 +3533,6 @@ Time2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
 Time3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
 Time4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
 Time5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
-PercentStartX=170
-PercentStartY=140
-Percent1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
-Percent2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
-Percent3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
-Percent4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
-Percent5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
-Percent1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
-Percent2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
-Percent3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
-Percent4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
-Percent5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
-DifficultyStartX=170
-DifficultyStartY=96
-DifficultySpacingX=110
-DifficultySpacingY=0
-DifficultyOnCommand=addx,640;sleep,0.1;bounceend,1;addx,-640
-DifficultyOffCommand=sleep,0.1;linear,0.5;diffusealpha,0
-SecondsPerPage=5
-ShowCategories=1
-ShowSongScores=0
-NumSongsToShow=10
-CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
-NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
-TextColor1=0.6,0.6,1,1
-TextColor2=1,0.3,0.3,1
-TextColor3=0.3,1,0.3,1
-EmptyScoreName=STEP
-NoScoreName=STEP
-DifficultiesToShow=easy,medium,hard,challenge
-PageFadeSeconds=1.0
-
-# Not all game types have NotesTypesToHide set, so add a few dummy colors
-# to prevent a crash.
-TextColor4=1.0,1,1.0,1
-TextColor5=1.0,1,1.0,1
-
 
 [ScreenSoundOptions]
 StyleIcon=0
