add AttractSoundFrequency option remove AttractSound and DemonstrationSound options

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3542,12 +3542,11 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,5;together;explanations
+OptionMenuFlags=rows,4;together;explanations
 Line1=conf,PreloadSounds
 Line2=conf,ResamplingQuality
-Line3=conf,AttractSound
-Line4=conf,DemonstrationSound
-Line5=conf,SoundVolume
+Line3=conf,AttractSoundFrequency
+Line4=conf,SoundVolume
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
