add CreditsJoinOnly, cleanup

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2640,6 +2640,7 @@ PlayerInfoP2OnCommand=shadowlength,0
 CreditsX=320
 CreditsY=474
 CreditsOnCommand=shadowlength,0
+CreditsJoinOnly=0
 
 [MusicWheelItem]
 IconX=-136
@@ -3780,7 +3781,6 @@ IconOffCommand=stoptweening;linear,0.1;diffusealpha,0
 [ArtistDisplay]
 TipShowTime=1
 TipOnCommand=
-TipY=0
 
 [ScreenSelectGame]
 StyleIcon=0
@@ -4326,10 +4326,6 @@ MeterP1OnCommand=rotationz,-90
 MeterP2OnCommand=rotationz,-90
 LevelP1OnCommand=addy,-140
 LevelP2OnCommand=addy,-140
-
-[AttackDisplay]
-TextP1OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
-TextP2OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
 
 [ProfileManager]
 StatsTitle=StepMania Statistics
