--- a/stepmania/NoteSkins/dance/default/metrics.ini
+++ b/stepmania/NoteSkins/dance/default/metrics.ini
@@ -17,6 +17,7 @@ HoldBodyAnimationIsVivid=0
 HoldBottomCapAnimationIsVivid=0
 HoldTailAnimationIsVivid=0
 TapNoteAnimationIsNoteColor=0
+TapAdditionAnimationIsNoteColor=0
 HoldHeadAnimationIsNoteColor=0
 HoldTopCapAnimationIsNoteColor=0
 HoldBodyAnimationIsNoteColor=0
