--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3283,9 +3283,10 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,2;together;explanations
+OptionMenuFlags=rows,3;together;explanations
 Line1=conf,AutogenMissingTypes
 Line2=conf,AutogenGroupCourses
+Line3=conf,FastLoad
 
 [ScreenProfileOptions]
 Player1Profile=
