change "autogen options" to "other options"

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3276,7 +3276,7 @@ Line11=conf,RandomAtEnd
 Line12=conf,Translations
 Line13=conf,Lyrics
 
-[ScreenAutogenOptions]
+[ScreenOtherOptions]
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
@@ -3720,18 +3720,18 @@ OptionMenuFlags=together;forceallplayers;rows,15;smnavigation
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
 Line1=list,Appearance Options
-Line2=list,Autogen Options
-Line3=list,Background Options
-Line4=list,Bookkeeping
-Line5=list,Center Image
-Line6=list,Coin Options
-Line7=list,Config Key/Joy Mappings
-Line8=list,Input Options
-Line9=list,Gameplay Options
-Line10=list,Graphic Options
-Line11=list,Machine Options
-Line12=list,Sound Options
-Line13=list,Profile Options
+Line2=list,Background Options
+Line3=list,Bookkeeping
+Line4=list,Center Image
+Line5=list,Coin Options
+Line6=list,Config Key/Joy Mappings
+Line7=list,Input Options
+Line8=list,Gameplay Options
+Line9=list,Graphic Options
+Line10=list,Machine Options
+Line11=list,Sound Options
+Line12=list,Profile Options
+Line13=list,Other Options
 Line14=list,Reload Songs/Courses
 Line15=list,Test Input
 
@@ -4243,10 +4243,10 @@ Appearance Options=1,together
 Appearance OptionsDefault=
 Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster
 Appearance OptionsName,1=Appearance Options
-Autogen Options=1,together
-Autogen OptionsDefault=
-Autogen Options,1=screen,ScreenAutogenOptions@ScreenOptionsMaster
-Autogen OptionsName,1=Autogen Options
+Other Options=1,together
+Other OptionsDefault=
+Other Options,1=screen,ScreenOtherOptions@ScreenOptionsMaster
+Other OptionsName,1=Other Options
 Background Options=1,together
 Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
