--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2820,6 +2820,7 @@ ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
 ShowScrollBar=0
+ShowBpmInSpeedTitle=0
 
 [ScreenMapControllers]
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
