move ScreenOptions frame animation to a metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2821,6 +2821,8 @@ ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
 ShowScrollBar=0
 ShowBpmInSpeedTitle=0
+FrameOnCommand=addx,-640;decelerate,0.3;addx,+640
+FrameOffCommand=accelerate,0.3;addx,+640
 
 [ScreenMapControllers]
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
