add NoHands option

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2959,6 +2959,7 @@ GreatCommand=shadowlength,4;diffuse,.6,.9,0,1;zoom,2.4;linear,0.05;zoom,2;sleep,
 GoodCommand=shadowlength,4;diffuse,0,1,1,1;zoom,2.2;linear,0.05;zoom,2;sleep,0.8;linear,0;diffusealpha,0
 BooCommand=shadowlength,4;diffuse,1,.1,1,1;zoom,2.0;vibrate;effectmagnitude,4,8,8;sleep,0.8;linear,0;diffusealpha,0
 MissCommand=shadowlength,4;diffuse,1,.3,0,1;zoom,2.0;y,-20;linear,0.8;y,20;sleep,0.8;linear,0;diffusealpha,0
+HitMineCommand=
 
 [BPMDisplay]
 NormalColor=1.0,1.0,0.0,1	// yellow
@@ -4090,8 +4091,8 @@ ScrollName,3=SPLIT
 Scroll,4=mod,alternate
 ScrollName,4=ALTERNATE
 
-Holds=4
-HoldsDefault=mod,no noholds,no planted,no twister
+Holds=5
+HoldsDefault=mod,no noholds,no planted,no twister,no nohands
 Holds,1=mod,noholds
 HoldsName,1=OFF
 Holds,2=
@@ -4100,6 +4101,8 @@ Holds,3=mod,planted
 HoldsName,3=PLANTED
 Holds,4=mod,twister
 HoldsName,4=TWISTER
+Holds,5=mod,nohands
+HoldsName,5=NO HANDS
 
 Mines=3
 MinesDefault=mod,no nomines,no mines
