clean up memory card logic

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2631,15 +2631,19 @@ TimerSeconds=0
 [ScreenSystemLayer]
 StatsX=632
 StatsY=10
-PlayerInfoP1X=120
-PlayerInfoP1Y=474
-PlayerInfoP1OnCommand=shadowlength,0
-PlayerInfoP2X=520
-PlayerInfoP2Y=474
-PlayerInfoP2OnCommand=shadowlength,0
-CreditsX=320
-CreditsY=474
-CreditsOnCommand=shadowlength,0
+StatsOnCommand=horizalign,right;vertalign,top;zoom,0.5;shadowlength,2
+MessageX=4
+MessageY=4
+MessageOnCommand=horizalign,left;vertalign,top;zoom,0.8;shadowlength,2
+TimeX=4
+TimeY=40
+TimeOnCommand=horizalign,left;vertalign,top;zoom,0.5;shadowlength,0;diffuse,1,0,1,1
+CreditsP1X=120
+CreditsP1Y=474
+CreditsP1OnCommand=shadowlength,0
+CreditsP2X=520
+CreditsP2Y=474
+CreditsP2OnCommand=shadowlength,0
 CreditsJoinOnly=0
 
 [MusicWheelItem]
@@ -3611,9 +3615,6 @@ TimerSeconds=24
 MaxRankingNameLength=4
 StyleIcon=1
 MemoryCardIcons=1
-NextScreen=ScreenRemoveMemoryCard
-
-[ScreenRemoveMemoryCard]
 NextScreen=ScreenBranchEnding@ScreenBranch
 
 [ScreenBranchEnding]
