--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1603,6 +1603,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageFileDriverDirect.h">
 			</File>
 			<File
+				RelativePath="RageFileDriverDirectHelpers.cpp">
+			</File>
+			<File
+				RelativePath="RageFileDriverDirectHelpers.h">
+			</File>
+			<File
 				RelativePath="RageFileDriverZip.cpp">
 			</File>
 			<File
