--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -233,6 +233,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="ScreenEditMenu.h">
 			</File>
 			<File
+				RelativePath="ScreenEnding.cpp">
+			</File>
+			<File
+				RelativePath="ScreenEnding.h">
+			</File>
+			<File
 				RelativePath="ScreenEvaluation.cpp">
 			</File>
 			<File
