--- a/stepmania/src/libresample/Makefile.in
+++ b/stepmania/src/libresample/Makefile.in
@@ -10,6 +10,7 @@ LIBS = @LIBS@ -lm
 
 AR = @AR@
 RANLIB = @RANLIB@
+srcdir=@srcdir@
 
 OBJS = \
 	src/resample.c.o \
@@ -17,6 +18,7 @@ OBJS = \
 	src/filterkit.c.o
 
 TARGETS = @TARGETS@
+DIRS=tests
 
 all: $(TARGETS)
 
@@ -24,20 +26,23 @@ libresample.a: $(OBJS) Makefile
 	$(AR) ruv libresample.a $(OBJS)
 	ranlib libresample.a
 
-tests/testresample: libresample.a tests/testresample.c
+tests/testresample: libresample.a $(srcdir)/tests/testresample.c $(DIRS)
 	$(CC) -o tests/testresample \
-		$(CFLAGS) tests/testresample.c \
+		$(CFLAGS) $(srcdir)/tests/testresample.c \
 		libresample.a $(LIBS)
 
-tests/compareresample: libresample.a tests/compareresample.c
+tests/compareresample: libresample.a $(srcdir)/tests/compareresample.c $(DIRS)
 	$(CC) -o tests/compareresample \
-		$(CFLAGS) tests/compareresample.c \
+		$(CFLAGS) $(srcdir)/tests/compareresample.c \
 		libresample.a -lsamplerate $(LIBS)
 
-tests/resample-sndfile: libresample.a tests/resample-sndfile.c
+tests/resample-sndfile: libresample.a $(srcdir)/tests/resample-sndfile.c $(DIRS)
 	$(CC) -o tests/resample-sndfile \
-		$(CFLAGS) tests/resample-sndfile.c \
+		$(CFLAGS) $(srcdir)/tests/resample-sndfile.c \
 		libresample.a -lsndfile $(LIBS)
+
+$(DIRS):
+	mkdir $(DIRS)
 
 clean:
 	rm -f $(TARGETS) $(OBJS)
@@ -47,6 +52,6 @@ dist: clean
 	rm -f config.status config.cache config.log src/config.h
 	rm -f *~ src/*~ tests/*~ include/*~
 
-%.c.o: %.c Makefile include/resample.h \
-	src/resample_defs.h src/filterkit.h src/config.h
+$(OBJS): %.c.o: $(srcdir)/%.c Makefile $(srcdir)/include/libresample.h \
+	$(srcdir)/src/resample_defs.h $(srcdir)/src/filterkit.h $(srcdir)/src/config.h
 	$(CC) -c $(CFLAGS) $< -o $@
