--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3977,335 +3977,214 @@ HelperY=320
 # Player options
 Speed=11
 SpeedDefault=mod,1x
-Speed,1=mod,0.25x
-SpeedName,1=x0.25
-Speed,2=mod,0.50x
-SpeedName,2=x0.50
-Speed,3=mod,0.75x
-SpeedName,3=x0.75
-Speed,4=mod,1x
-SpeedName,4=x1
-Speed,5=mod,1.5x
-SpeedName,5=x1.5
-Speed,6=mod,2x
-SpeedName,6=x2
-Speed,7=mod,3x
-SpeedName,7=x3
-Speed,8=mod,5x
-SpeedName,8=x5
-Speed,9=mod,8x
-SpeedName,9=x8
-Speed,10=mod,C200
-SpeedName,10=C200
-Speed,11=mod,C400
-SpeedName,11=C400
+Speed,1=mod,0.25x;name,x0.25
+Speed,2=mod,0.50x;name,x0.50
+Speed,3=mod,0.75x;name,x0.75
+Speed,4=mod,1x;name,x1
+Speed,5=mod,1.5x;name,x1.5
+Speed,6=mod,2x;name,x2
+Speed,7=mod,3x;name,x3
+Speed,8=mod,5x;name,x5
+Speed,9=mod,8x;name,x8
+Speed,10=mod,C200;name,C200
+Speed,11=mod,C400;name,C400
 
 Accel=6
 AccelDefault=mod,no boost,no brake,no wave,no expand,no boomerang
-Accel,1=
-AccelName,1=OFF
-Accel,2=mod,boost
-AccelName,2=BOOST
-Accel,3=mod,brake
-AccelName,3=BRAKE
-Accel,4=mod,wave
-AccelName,4=WAVE
-Accel,5=mod,expand
-AccelName,5=EXPAND
-Accel,6=mod,boomerang
-AccelName,6=BOOMERANG
+Accel,1=name,Off
+Accel,2=mod,boost;name,Boost
+Accel,3=mod,brake;name,Brake
+Accel,4=mod,wave;name,Wave
+Accel,5=mod,expand;name,Expand
+Accel,6=mod,boomerang;name,Boomerang
 
 Effect=7
 EffectDefault=mod,no drunk,no dizzy,no mini,no flip,no tornado,no tipsy
-Effect,1=
-EffectName,1=OFF
-Effect,2=mod,drunk
-EffectName,2=DRUNK
-Effect,3=mod,dizzy
-EffectName,3=DIZZY
-Effect,4=mod,mini
-EffectName,4=MINI
-Effect,5=mod,flip
-EffectName,5=FLIP
-Effect,6=mod,tornado
-EffectName,6=TORNADO
-Effect,7=mod,tipsy
-EffectName,7=TIPSY
+Effect,1=name,Off
+Effect,2=mod,drunk;name,Drunk
+Effect,3=mod,dizzy;name,Dizzy
+Effect,4=mod,mini;name,Mini
+Effect,5=mod,flip;name,Flip
+Effect,6=mod,tornado;name,Tornado
+Effect,7=mod,tipsy;name,Tipsy
 
 Appearance=6
 AppearanceDefault=mod,no hidden,no sudden,no stealth,no blink,no randomvanish
-Appearance,1=
-AppearanceName,1=VISIBLE
-Appearance,2=mod,hidden
-AppearanceName,2=HIDDEN
-Appearance,3=mod,sudden
-AppearanceName,3=SUDDEN
-Appearance,4=mod,stealth
-AppearanceName,4=STEALTH
-Appearance,5=mod,blink
-AppearanceName,5=BLINK
-Appearance,6=mod,randomvanish
-AppearanceName,6=R.VANISH
+Appearance,1=name,Visible
+Appearance,2=mod,hidden;name,Hidden
+Appearance,3=mod,sudden;name,Sudden
+Appearance,4=mod,stealth;name,Stealth
+Appearance,5=mod,blink;name,Blink
+Appearance,6=mod,randomvanish;name,R.Vanish
 
 Turn=6
 TurnDefault=mod,no turn
-Turn,1=
-TurnName,1=OFF
-Turn,2=mod,mirror
-TurnName,2=MIRROR
-Turn,3=mod,left
-TurnName,3=LEFT
-Turn,4=mod,right
-TurnName,4=RIGHT
-Turn,5=mod,shuffle
-TurnName,5=SHUFFLE
-Turn,6=mod,supershuffle
-TurnName,6=S.SHUFFLE
+Turn,1=name,Off
+Turn,2=mod,mirror;name,Mirror
+Turn,3=mod,left;name,Left
+Turn,4=mod,right;name,Right
+Turn,5=mod,shuffle;name,Shuffle
+Turn,6=mod,supershuffle;name,SuperShuffle
 
 Insert=8
 InsertDefault=mod,no little,no wide,no big,no quick,no skippy,no echo,no stomp
-Insert,1=
-InsertName,1=OFF
-Insert,2=mod,little
-InsertName,2=LITTLE
-Insert,3=mod,wide
-InsertName,3=WIDE
-Insert,4=mod,big
-InsertName,4=BIG
-Insert,5=mod,quick
-InsertName,5=QUICK
-Insert,6=mod,skippy
-InsertName,6=SKIPPY
-Insert,7=mod,echo
-InsertName,7=ECHO
-Insert,8=mod,stomp
-InsertName,8=STOMP
+Insert,1=name,Off
+Insert,2=mod,little;name,Little
+Insert,3=mod,wide;name,Wide
+Insert,4=mod,big;name,Big
+Insert,5=mod,quick;name,Quick
+Insert,6=mod,skippy;name,Skippy
+Insert,7=mod,echo;name,Echo
+Insert,8=mod,stomp;name,Stomp
 
 Scroll=4
 ScrollDefault=mod,no reverse,no split,no alternate
-Scroll,1=
-ScrollName,1=STANDARD
-Scroll,2=mod,reverse
-ScrollName,2=REVERSE
-Scroll,3=mod,split
-ScrollName,3=SPLIT
-Scroll,4=mod,alternate
-ScrollName,4=ALTERNATE
+Scroll,1=name,Standard
+Scroll,2=mod,reverse;name,Reverse
+Scroll,3=mod,split;name,Split
+Scroll,4=mod,alternate;name,Alternate
 
 Holds=5
 HoldsDefault=mod,no noholds,no planted,no twister,no nohands
-Holds,1=mod,noholds
-HoldsName,1=OFF
-Holds,2=
-HoldsName,2=ON
-Holds,3=mod,planted
-HoldsName,3=PLANTED
-Holds,4=mod,twister
-HoldsName,4=TWISTER
-Holds,5=mod,nohands
-HoldsName,5=NO HANDS
+Holds,1=mod,noholds;name,Off
+Holds,2=name,On
+Holds,3=mod,planted;name,Planted
+Holds,4=mod,twister;name,Twister
+Holds,5=mod,nohands;name,NoHands
 
 Mines=3
 MinesDefault=mod,no nomines,no mines
-Mines,1=mod,nomines
-MinesName,1=REMOVE
-Mines,2=
-MinesName,2=ON
-Mines,3=mod,mines
-MinesName,3=ADD
+Mines,1=mod,nomines;name,Off
+Mines,2=name,On
+Mines,3=mod,mines;name,Add
 
 Hide=3
 HideDefault=mod,no dark,no blind
-Hide,1=
-HideName,1=OFF
-Hide,2=mod,dark
-HideName,2=DARK
-Hide,3=mod,blind
-HideName,3=BLIND
+Hide,1=name,Off
+Hide,2=mod,dark;name,Dark
+Hide,3=mod,blind;name,Blind
 
 Persp=5
 PerspDefault=mod,overhead
-Persp,1=mod,incoming
-PerspName,1=INCOMING
-Persp,2=mod,overhead
-PerspName,2=OVERHEAD
-Persp,3=mod,space
-PerspName,3=SPACE
-Persp,4=mod,hallway
-PerspName,4=HALLWAY
-Persp,5=mod,distant
-PerspName,5=DISTANT
+Persp,1=mod,incoming;name,Incoming
+Persp,2=mod,overhead;name,Overhead
+Persp,3=mod,space;name,Space
+Persp,4=mod,hallway;name,Hallway
+Persp,5=mod,distant;name,Distant
 
 # Song options
 LifeType=2,together
 LifeTypeDefault=
-LifeType,1=mod,bar
-LifeTypeName,1=BAR
-LifeType,2=mod,battery
-LifeTypeName,2=BATTERY
+LifeType,1=mod,bar;name,Bar
+LifeType,2=mod,battery;name,Battery
 
 BarDrain=3,together
 BarDrainDefault=
-BarDrain,1=mod,normal-drain
-BarDrainName,1=NORMAL
-BarDrain,2=mod,norecover
-BarDrainName,2=NO RECOVER
-BarDrain,3=mod,suddendeath
-BarDrainName,3=SUDDEN DEATH
+BarDrain,1=mod,normal-drain;name,Normal
+BarDrain,2=mod,norecover;name,NoRecover
+BarDrain,3=mod,suddendeath;name,SuddenDeath
 
 BatLives=10,together
 BatLivesDefault=
-BatLives,1=mod,1 life
-BatLivesName,1=1
-BatLives,2=mod,2 lives
-BatLivesName,2=2
-BatLives,3=mod,3 lives
-BatLivesName,3=3
-BatLives,4=mod,4 lives
-BatLivesName,4=4
-BatLives,5=mod,5 lives
-BatLivesName,5=5
-BatLives,6=mod,6 lives
-BatLivesName,6=6
-BatLives,7=mod,7 lives
-BatLivesName,7=7
-BatLives,8=mod,8 lives
-BatLivesName,8=8
-BatLives,9=mod,9 lives
-BatLivesName,9=9
-BatLives,10=mod,10 lives
-BatLivesName,10=10
+BatLives,1=mod,1 life;name,1
+BatLives,2=mod,2 lives;name,2
+BatLives,3=mod,3 lives;name,3
+BatLives,4=mod,4 lives;name,4
+BatLives,5=mod,5 lives;name,5
+BatLives,6=mod,6 lives;name,6
+BatLives,7=mod,7 lives;name,7
+BatLives,8=mod,8 lives;name,8
+BatLives,9=mod,9 lives;name,9
+BatLives,10=mod,10 lives;name,10
 
 Fail=3,together
 FailDefault=
-Fail,1=mod,failarcade
-FailName,1=ARCADE
-Fail,2=mod,failendofsong
-FailName,2=END OF SONG
-Fail,3=mod,failoff
-FailName,3=OFF
+Fail,1=mod,failarcade;name,Arcade
+Fail,2=mod,failendofsong;name,EndOfSong
+Fail,3=mod,failoff;name,Off
 
 AssistTick=2,together
 AssistTickDefault=
-AssistTick,1=mod,no assisttick
-AssistTickName,1=OFF
-AssistTick,2=mod,assisttick
-AssistTickName,2=ON
+AssistTick,1=mod,no assisttick;name,Off
+AssistTick,2=mod,assisttick;name,On
 
 Rate=18,together
 RateDefault=
-Rate,1=mod,0.3xmusic
-RateName,1=0.3x
-Rate,2=mod,0.4xmusic
-RateName,2=0.4x
-Rate,3=mod,0.5xmusic
-RateName,3=0.5x
-Rate,4=mod,0.6xmusic
-RateName,4=0.6x
-Rate,5=mod,0.7xmusic
-RateName,5=0.7x
-Rate,6=mod,0.8xmusic
-RateName,6=0.8x
-Rate,7=mod,0.9xmusic
-RateName,7=0.9x
-Rate,8=mod,1.0xmusic
-RateName,8=1.0x
-Rate,9=mod,1.1xmusic
-RateName,9=1.1x
-Rate,10=mod,1.2xmusic
-RateName,10=1.2x
-Rate,11=mod,1.3xmusic
-RateName,11=1.3x
-Rate,12=mod,1.4xmusic
-RateName,12=1.4x
-Rate,13=mod,1.5xmusic
-RateName,13=1.5x
-Rate,14=mod,1.6xmusic
-RateName,14=1.6x
-Rate,15=mod,1.7xmusic
-RateName,15=1.7x
-Rate,16=mod,1.8xmusic
-RateName,16=1.8x
-Rate,17=mod,1.9xmusic
-RateName,17=1.9x
-Rate,18=mod,2.0xmusic
-RateName,18=2.0x
+Rate,1=mod,0.3xmusic;name,0.3x
+Rate,2=mod,0.4xmusic;name,0.4x
+Rate,3=mod,0.5xmusic;name,0.5x
+Rate,4=mod,0.6xmusic;name,0.6x
+Rate,5=mod,0.7xmusic;name,0.7x
+Rate,6=mod,0.8xmusic;name,0.8x
+Rate,7=mod,0.9xmusic;name,0.9x
+Rate,8=mod,1.0xmusic;name,1.0x
+Rate,9=mod,1.1xmusic;name,1.1x
+Rate,10=mod,1.2xmusic;name,1.2x
+Rate,11=mod,1.3xmusic;name,1.3x
+Rate,12=mod,1.4xmusic;name,1.4x
+Rate,13=mod,1.5xmusic;name,1.5x
+Rate,14=mod,1.6xmusic;name,1.6x
+Rate,15=mod,1.7xmusic;name,1.7x
+Rate,16=mod,1.8xmusic;name,1.8x
+Rate,17=mod,1.9xmusic;name,1.9x
+Rate,18=mod,2.0xmusic;name,2.0x
 
 AutoAdjust=2,together
 AutoAdjustDefault=
-AutoAdjust,1=mod,no autosync
-AutoAdjustName,1=OFF
-AutoAdjust,2=mod,autosync
-AutoAdjustName,2=ON
+AutoAdjust,1=mod,no autosync;name,Off
+AutoAdjust,2=mod,autosync;name,On
 
 SaveScores=2,together
 SaveScoresDefault=
-SaveScores,1=mod,no savescore
-SaveScoresName,1=OFF
-SaveScores,2=mod,savescore
-SaveScoresName,2=ON
+SaveScores,1=mod,no savescore;name,Off
+SaveScores,2=mod,savescore;name,On
 
 # ScreenOptionsMenu
 Appearance Options=1,together
 Appearance OptionsDefault=
-Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster
-Appearance OptionsName,1=Appearance Options
+Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster;name,AppearanceOptions
 Other Options=1,together
 Other OptionsDefault=
-Other Options,1=screen,ScreenOtherOptions@ScreenOptionsMaster
-Other OptionsName,1=Other Options
+Other Options,1=screen,ScreenOtherOptions@ScreenOptionsMaster;name,OtherOptions
 Background Options=1,together
 Background OptionsDefault=
-Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
-Background OptionsName,1=Background Options
+Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster;name,BackgroundOptions
 Bookkeeping=1,together
 BookkeepingDefault=
-Bookkeeping,1=screen,ScreenBookkeeping
-BookkeepingName,1=Bookkeeping
+Bookkeeping,1=screen,ScreenBookkeeping;name,Bookkeeping
 Center Image=1,together
 Center ImageDefault=
-Center Image,1=screen,ScreenCenterImage
-Center ImageName,1=Center Image
+Center Image,1=screen,ScreenCenterImage;name,CenterImage
 Coin Options=1,together
 Coin OptionsDefault=
-Coin Options,1=screen,ScreenCoinOptions@ScreenOptionsMaster
-Coin OptionsName,1=Coin Options
+Coin Options,1=screen,ScreenCoinOptions@ScreenOptionsMaster;name,CoinOptions
 Config Key/Joy Mappings=1,together
 Config Key/Joy MappingsDefault=
-Config Key/Joy Mappings,1=screen,ScreenMapControllers
-Config Key/Joy MappingsName,1=Config Key/Joy Mappings
+Config Key/Joy Mappings,1=screen,ScreenMapControllers;name,KeyJoyMappings
 Input Options=1,together
 Input OptionsDefault=
-Input Options,1=screen,ScreenInputOptions@ScreenOptionsMaster
-Input OptionsName,1=Input Options
+Input Options,1=screen,ScreenInputOptions@ScreenOptionsMaster;name,InputOptions
 Gameplay Options=1,together
 Gameplay OptionsDefault=
-Gameplay Options,1=screen,ScreenGameplayOptions@ScreenOptionsMaster
-Gameplay OptionsName,1=Gameplay Options
+Gameplay Options,1=screen,ScreenGameplayOptions@ScreenOptionsMaster;name,GameplayOptions
 Graphic Options=1,together
 Graphic OptionsDefault=
-Graphic Options,1=screen,ScreenGraphicOptions@ScreenOptionsMaster
-Graphic OptionsName,1=Graphic Options
+Graphic Options,1=screen,ScreenGraphicOptions@ScreenOptionsMaster;name,GraphicOptions
 Machine Options=1,together
 Machine OptionsDefault=
-Machine Options,1=screen,ScreenMachineOptions@ScreenOptionsMaster
-Machine OptionsName,1=Machine Options
+Machine Options,1=screen,ScreenMachineOptions@ScreenOptionsMaster;name,MachineOptions
 Sound Options=1,together
 Sound OptionsDefault=
-Sound Options,1=screen,ScreenSoundOptions@ScreenOptionsMaster
-Sound OptionsName,1=Sound Options
+Sound Options,1=screen,ScreenSoundOptions@ScreenOptionsMaster;name,SoundOptions
 Profile Options=1,together
 Profile OptionsDefault=
-Profile Options,1=screen,ScreenProfileOptions
-Profile OptionsName,1=Profile Options
+Profile Options,1=screen,ScreenProfileOptions;name,ProfileOptions
 Reload Songs/Courses=1,together
 Reload Songs/CoursesDefault=
-Reload Songs/Courses,1=screen,ScreenReloadSongs
-Reload Songs/CoursesName,1=Reload Songs/Courses
+Reload Songs/Courses,1=screen,ScreenReloadSongs;name,ReloadSongs
 Test Input=1,together
 Test InputDefault=
-Test Input,1=screen,ScreenTestInput
-Test InputName,1=Test Input
+Test Input,1=screen,ScreenTestInput;name,TestInput
 
 [DancingCharacters]
 #2D Character X/Y positions in relation to the center
