--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2820,6 +2820,8 @@ PageX=320
 PageY=240
 PageOnCommand=
 LineHighlightOnCommand=
+LineHighlightChangeCommand=
+LineHighlightChangeToExitCommand=
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
