--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2829,6 +2829,7 @@ ShowScrollBar=0
 ShowBpmInSpeedTitle=0
 FrameOnCommand=addx,-640;decelerate,0.3;addx,+640
 FrameOffCommand=accelerate,0.3;addx,+640
+SeparateExitRow=0
 
 [ScreenMapControllers]
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
