--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2830,6 +2830,15 @@ ShowBpmInSpeedTitle=0
 FrameOnCommand=addx,-640;decelerate,0.3;addx,+640
 FrameOffCommand=accelerate,0.3;addx,+640
 SeparateExitRow=0
+MoreX=0
+MoreY=0
+MoreOnCommand=
+MoreShowMoreCommand=
+MoreHideMoreCommand=
+MoreExitSelectedP1Command=
+MoreExitSelectedP2Command=
+MoreExitUnselectedP1Command=
+MoreExitUnselectedP2Command=
 
 [ScreenMapControllers]
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
