--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1843,6 +1843,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="ActorCollision.h">
 			</File>
 			<File
+				RelativePath="ActorCommands.cpp">
+			</File>
+			<File
+				RelativePath="ActorCommands.h">
+			</File>
+			<File
 				RelativePath=".\ActorFrame.cpp">
 			</File>
 			<File
