--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4056,13 +4056,14 @@ Scroll,2=mod,reverse;name,Reverse
 Scroll,3=mod,split;name,Split
 Scroll,4=mod,alternate;name,Alternate
 
-Holds=5
-HoldsDefault=mod,no noholds,no planted,no twister,no nohands
+Holds=6
+HoldsDefault=mod,no noholds,no planted,no twister,no nojumps,no nohands
 Holds,1=mod,noholds;name,Off
 Holds,2=name,On
 Holds,3=mod,planted;name,Planted
 Holds,4=mod,twister;name,Twister
-Holds,5=mod,nohands;name,NoHands
+Holds,5=mod,nojumps;name,NoJumps
+Holds,6=mod,nohands;name,NoHands
 
 Mines=3
 MinesDefault=mod,no nomines,no mines
