add metric to disable roulette on menu timer

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -747,6 +747,7 @@ NextOptionsScreenOni=ScreenPlayerOptions
 NextOptionsScreenEndless=ScreenPlayerOptions
 NextOptionsScreenBattle=ScreenPlayerOptions
 NextOptionsScreenRave=ScreenRaveOptions
+DoRouletteOnMenuTimer=1
 
 [ScreenEz2SelectMusic]
 UseModeSwitcher=0
