split SORT_MENU into SORT_SORT_MENU and SORT_MODE_MENU

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2705,8 +2705,10 @@ ShowRandom=1
 Use3D=0
 Wheel3DRadius=200 # Possibly safe defaults?
 CirclePercent=0.5
-MenuNames=GROUP:TITLE:BPM:PLAYERS' BEST:TOP GRADE:ARTIST:EASY METER:MEDIUM METER:HARD METER
-MenuActions=sort,GROUP:sort,TITLE:sort,BPM:sort,PLAYERS BEST:sort,TOP GRADE:sort,ARTIST:sort,EASY METER:sort,MEDIUM METER:sort,HARD METER
+SortMenuNames=GROUP:TITLE:BPM:PLAYERS' BEST:TOP GRADE:ARTIST:EASY METER:MEDIUM METER:HARD METER
+SortMenuActions=sort,GROUP:sort,TITLE:sort,BPM:sort,PLAYERS BEST:sort,TOP GRADE:sort,ARTIST:sort,EASY METER:sort,MEDIUM METER:sort,HARD METER
+ModeMenuNames=GROUP
+ModeMenuActions=sort,GROUP
 
 [LifeMeterBar]
 MeterWidth=260
@@ -3000,8 +3002,10 @@ NextSort1=MenuLeft-MenuRight-Start
 NextSort2=MenuLeft+MenuRight
 NextSort3=Left-Right-Start
 NextSort4=Left+Right
-Menu1=Up,Down,Up,Down
-Menu2=MenuUp,MenuDown,MenuUp,MenuDown
+SortMenu1=Up,Down,Up,Down
+SortMenu2=MenuUp,MenuDown,MenuUp,MenuDown
+ModeMenu1=
+ModeMenu2=
 Mirror=Up,Left,Right,Left,Right
 Left=Up,Down,Right,Left
 Right=Up,Down,Left,Right
