--- a/stepmania/Data/AI.ini
+++ b/stepmania/Data/AI.ini
@@ -85,3 +85,19 @@ GoodWeight=
 GreatWeight=
 PerfectWeight=30
 MarvelousWeight=70
+
+[Skill11]
+MissWeight=
+BooWeight=
+GoodWeight=
+GreatWeight=
+PerfectWeight=20
+MarvelousWeight=80
+
+[Skill12]
+MissWeight=
+BooWeight=
+GoodWeight=
+GreatWeight=
+PerfectWeight=10
+MarvelousWeight=90
