--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3493,6 +3493,10 @@ CategoryX=517
 CategoryY=32
 CategoryOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
 CategoryOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+CourseTitleX=517
+CourseTitleY=32
+CourseTitleOnCommand=maxwidth,230;addx,640;sleep,0.0;bounceend,1;addx,-640
+CourseTitleOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 StepsTypeX=520
 StepsTypeY=60
 StepsTypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
